# NetworkStateMachine

./: CMakeLists.txt  CMakeSettings.json  device.cpp  device.h  main.cpp
event/: event.h
state/: device_state.h  enviando_start_state.cpp  enviando_start_state.h  link_down_state.cpp  link_down_state.h  link_ok_state.cpp  link_ok_state.h  start_recebido_state.cpp  start_recebido_state.h
